--- a/index.html
+++ b/index.html
@@ -137,30 +137,30 @@ https://templatemo.com/tm-516-known
                </div>
                <br>
                <div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-delay="0.9s">
-                    <span class="text-top">Web Design <small>100%</small></span>
+                    <span class="text-top">Lusaka <small>100%</small></span>
                          <div class="gift-progress">
                               <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                          </div>
                          <br>
-                    <span>Multimedia <small>80%</small></span>
+                    <span>Ndola <small>80%</small></span>
                          <div class="gift-progress">
                               <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                          </div>
                          <br>
                         
-                    <span>Search Engine Marketing <small>90%</small></span>
+                    <span>Kabwe<small>90%</small></span>
                          <div class="gift-progress">
                               <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
                          </div>
                          <br>
-                    <span>Custom Branding <small>70%</small></span>
+                    <span>Kapiri<small>70%</small></span>
                          <div class="gift-progress">
                               <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
                          </div>
 
                          <br>
 
-                         <span>Custom Branding <small>70%</small></span>
+                         <span>Solwezi <small>70%</small></span>
                          <div class="gift-progress">
                               <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
                          </div>
