background-nav fixed

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@ https://templatemo.com/tm-516-known
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                   
+                    <a href="#" class="navbar-brand"> <img src="./images/logo-removebg-preview.png"></a>
                </div>
 
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
-                    <a href="#" class="navbar-brand"> <img src="./images/logo.png"></a>
+ 
                     <ul class="nav navbar-nav navbar-nav-first">
                          <li><a href="#top" class="smoothScroll">Home</a></li>
                          <li><a href="#about" class="smoothScroll">About</a></li>
