--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ https://templatemo.com/tm-516-known
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Our Legislation</h1>
+                                             <h1>Our Legislation is below please do download below</h1>
                                              <h3>Our online courses are built in partnership with technology leaders and are designed to meet industry demands.</h3>
                                              <a href="#courses" class="section-btn btn btn-default smoothScroll">Download Now</a>
                                         </div>
@@ -107,7 +107,7 @@ https://templatemo.com/tm-516-known
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Our Mandate</h1>
+                                             <h1>Our Mandate is to make sure the country is safe</h1>
                                              <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Download Now</a>
                                         </div>
