--- a/about-us.html
+++ b/about-us.html
@@ -57,8 +57,8 @@ https://templatemo.com/tm-516-known
                <div class="collapse navbar-collapse">
  
                     <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="#top" class="smoothScroll">Home</a></li>
-                         <li><a href="./about-us.html" class="smoothScroll">About</a></li>
+                         <li><a href="./index.html" class="smoothScroll">Home</a></li>
+                         <li><a href="#top" class="smoothScroll">About</a></li>
                          <li><a href="#team" class="smoothScroll">Our Publications</a></li>
                          <li><a href="#courses" class="smoothScroll">Presentations</a></li>
                          <li><a href="#testimonial" class="smoothScroll">Mornings Rounds</a></li>
@@ -83,9 +83,9 @@ https://templatemo.com/tm-516-known
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Ministry of Home Affairs & Internal Security Office of the State Forensic Pathologist.</h1>
+                                             <h1>Lets Find Out Who We Are?</h1>
                                              <h3>Internal Security Office of the State Forensic Pathologist</h3>
-                                             <a href="./about-us.html" class="section-btn btn btn-default smoothScroll">About Us</a>
+                                             <a href="./about-us.html" class="section-btn btn btn-default smoothScroll">Home Page</a>
                                         </div>
                                    </div>
                               </div>
@@ -121,13 +121,73 @@ https://templatemo.com/tm-516-known
 
 
 
+<!-- addition -->
+
+<div class="tab-buttons">
+    <div class="tab-button active" onclick="showTab(0)">Mission</div>
+    <div class="tab-button" onclick="showTab(1)">Vision</div>
+    <div class="tab-button" onclick="showTab(2)">Core Values</div>
+  </div>
+
+  <div class="tab-content active">
+    <img src="./images/logo-removebg-preview.png" alt="Mission Image">
+    <div class="tab-text">
+      <h3>Our Mission</h3>
+      <p>To be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a
+        be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a
+        be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a
+        nd trusted by all sectors of society.</p>
+    </div>
+  </div>
+
+  <div class="tab-content">
+    <img src="./images/vision-removebg-preview.png" alt="Vision Image">
+    <div class="tab-text">
+      <h3>Our Vision</h3>
+      <p>To be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a
+        be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a
+        be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a be a leading forensic institution in Africa, recognized for excellence in medico-legal investigations a
+        nd trusted by all sectors of society.</p>
+    </div>
+  </div>
+
+  <div class="tab-content">
+    <img src="https://via.placeholder.com/300x200?text=Values" alt="Core Values Image">
+    <div class="tab-text">
+      <h3>Our Core Values</h3>
+      <p>Integrity, impartiality, scientific rigor, confidentiality, professionalism, and respect for human dignity in every examination and report we deliver.</p>
+    </div>
+  </div>
+</div>
+
+<script>
+  function showTab(index) {
+    const tabs = document.querySelectorAll('.tab-content');
+    const buttons = document.querySelectorAll('.tab-button');
+    tabs.forEach((tab, i) => {
+      tab.classList.toggle('active', i === index);
+      buttons[i].classList.toggle('active', i === index);
+    });
+  }
+</script>
+
+
+<!-- addition -->
+
+
+
+
+
+
+
+
 
 <!-- start about -->
 <div id="gift-about">
      <div class="gift-container">
           <div class="gift-row">
                <div class="col-md-6 col-sm-6 wow fadeInLeft" data-wow-delay="0.9s">
-                    <h3>About Us</h3>
+                    <h3>History</h3>
                     <h4>Ministry of Home Affairs & Internal Security Office of the State Forensic Pathologist Internal Security Office of the State Forensic Pathologist.</h4>
                     <p>The Office of State Forensic Pathologist (OSFP) is an autonomous death investigation institution domiciled in the Ministry of Home Affairs and Internal Security and accountable to the Minister of Home Affairs and Internal Security per the National Forensic Act No.2, 2020 provisions.
 
@@ -175,7 +235,7 @@ https://templatemo.com/tm-516-known
 <br>
 
 		<!-- start divider -->
-		<div id="divider">
+		<div id="about-divider">
 			<div class="divider-container">
 				<div class="divider-row">
 					<div class="col-md-1 col-sm-1"></div>
@@ -189,6 +249,86 @@ https://templatemo.com/tm-516-known
 			</div>
 		</div>
 		<!-- end divider -->
+
+
+
+        <!-- new -->
+
+        <div class="more-info about-info">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="more-info-content">
+                    <div class="row">
+                      <div class="col-md-6 align-self-center">
+                        <div class="right-content">
+                          <span>our solid background on finance</span>
+                          <h2>Get to know about <em>our company</em></h2>
+                          <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
+                          <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
+                          <a href="" class="filled-button">Read More</a>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="left-image">
+                          <img src="./images/pexels-cottonbro-10481324.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      
+          <div class="team">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-heading">
+                    <h2>Our team <em>members</em></h2>
+                    <span>Suspendisse a ante in neque iaculis lacinia</span>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-4">
+                  <div class="team-item">
+                    <img src="./images/c1.jpg" alt="">
+                    <div class="down-content">
+                      <h4>William Smith</h4>
+                      <span>Co-Founder</span>
+                      <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="team-item">
+                    <img src="./images/c1.jpg" alt="">
+                    <div class="down-content">
+                      <h4>Mary Houston</h4>
+                      <span>Chief Marketing Officer</span>
+                      <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="team-item">
+                    <img src="./images/c1.jpg" alt="">
+                    <div class="down-content">
+                      <h4>Paul Walker</h4>
+                      <span>Financial Analyst</span>
+                      <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+        <!-- new -->
 
 <!-- start service -->
 <div id="service">
