--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-516-known
                          <li><a href="#team" class="smoothScroll">Our Publications</a></li>
                          <li><a href="#courses" class="smoothScroll">Presentations</a></li>
                          <li><a href="#testimonial" class="smoothScroll">Mornings Rounds</a></li>
-                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                         <li><a href="contact.html" class="smoothScroll">Contact</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -324,6 +324,9 @@ https://templatemo.com/tm-516-known
           </div>
      </section>
 
+
+     
+
 <!-- gifts code -->
 
 <div class="news">
@@ -365,6 +368,7 @@ https://templatemo.com/tm-516-known
        
 
 <br>
+
 
 
 
