--- a/presentations.html
+++ b/presentations.html
@@ -57,10 +57,10 @@ https://templatemo.com/tm-516-known
                <div class="collapse navbar-collapse">
  
                     <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="#top" class="smoothScroll">Home</a></li>
+                         <li><a href="./index.html" class="smoothScroll">Home</a></li>
                          <li><a href="./about-us.html" class="smoothScroll">About</a></li>
                          <li><a href="#team" class="smoothScroll">Our Publications</a></li>
-                         <li><a href="./presentations.html" class="smoothScroll">Presentations</a></li>
+                         <li><a href="#top"  class="smoothScroll">Presentations</a></li>
                          <li><a href="#testimonial" class="smoothScroll">Mornings Rounds</a></li>
                          <li><a href="contact.html" class="smoothScroll">Contact</a></li>
                     </ul>
