--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-516-known
                          <li><a href="#team" class="smoothScroll">Our Publications</a></li>
                          <li><a href="#courses" class="smoothScroll">Presentations</a></li>
                          <li><a href="#testimonial" class="smoothScroll">Mornings Rounds</a></li>
-                         <li><a href="./contact.html" class="smoothScroll">Contact</a></li>
+                         <li><a href="./contact.html" class="smoothSc">Contact</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
